--- a/home.html
+++ b/home.html
@@ -46,22 +46,22 @@
              <div class="item active">
                <img src="css/img/sajt-vizitka.png"alt="">
                <div class="carousel-caption">
-                 <h3>Первый слайд</h3>
-                 <p>Описание первого слайда</p>
+                 <h3>Сайт визитку</h3>
+                 <p>Заказуем</p>
                </div>
              </div>
              <div class="item">
                <img src="css/img/5images.jpg"alt="">
                <div class="carousel-caption">
-                 <h3>Второй слайд</h3>
-                 <p>Описание второго слайда</p>
+                 <h3>Современного </h3>
+                 <p>Любого</p>
                </div>
              </div>
              <div class="item">
                <img src="css/img/fff.jpg"alt="">
                <div class="carousel-caption">
-                 <h3>Третий слайд</h3>
-                 <p>Описание третьего слайда</p>
+                 <h3>Дизайна</h3>
+                 <p>На ваш вкус</p>
                </div>
              </div>
            </div>
