--- a/about_me.html
+++ b/about_me.html
@@ -21,14 +21,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-                 <a class="navbar-brand"href="home.html">MinenkoSergey</a>
+                 <a class="navbar-brand"href="#">MinenkoSergey</a>
             </div>
             <div class="collapse navbar-collapse" id="responsive-menu">
               <ul class="nav navbar-nav">
                 <li><a href="home.html">Главная</a></li>
 
                 <li><a href="about_me.html">Обо мне</a></li>
-                <li><a href="contakts.html">Контакты</a></li>
+                <li><a href="contacts2.html">Контакты</a></li>
               </ul>
 
             </div>
@@ -119,7 +119,7 @@
                <li class="title">Меню<li>
                <li><a href="home.html">Главная</a></li>
                <li><a href="about_me.html">Обо мне</a></li>
-               <li><a href="contakts.html">Контакты</a></li>
+               <li><a href="contacts2.html">Контакты</a></li>
 
              </ul>
            </div>
@@ -134,7 +134,7 @@
            </div>
            <div class="col-md-3">
              <ul class="list-unstyled">
-               <li class="title"><a href="contakts.html">Контакты</a><li>
+               <li class="title"><a href="contacts2.html">Контакты</a><li>
                <li> Тел:+30676370543</li>
                <li> Тел:+30508499303</li>
                <li> Email:minenkosergey06@gmail.com</li>
@@ -158,6 +158,16 @@
          </div>
        </div>
       </div>
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.js" type="text/javascript"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            var url = document.location.toString();
+            $("a").filter(function () {
+                return url.indexOf(this.href) != -1;
+            }).addClass("Current");
+        });
+    </script>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -169,7 +179,7 @@
        $('[data-toggle="popover"]') .popover();
 
      });
-
+    </script>
 
 
 
