--- a/home.html
+++ b/home.html
@@ -21,14 +21,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-                 <a class="navbar-brand"href="home.html">MinenkoSergey</a>
+                 <a class="navbar-brand"href="#">MinenkoSergey</a>
             </div>
             <div class="collapse navbar-collapse" id="responsive-menu">
               <ul class="nav navbar-nav">
                 <li><a href="home.html">Главная</a></li>
 
                 <li><a href="about_me.html">Обо мне</a></li>
-                <li><a href="contakts.html">Контакты</a></li>
+                <li><a href="contacts2.html">Контакты</a></li>
               </ul>
 
             </div>
@@ -87,7 +87,7 @@
 <ul>
 <li> опи­са­ние де­я­тель­но­сти ком­па­нии; </li>
 <li> об­щая ин­фор­ма­ция о про­дук­ции или услу­гах; </li>
-<li><a href="/projects/cms/news/">но­во­сти</a>; </li>
+<li> но­во­сти; </li>
 <li> прайс-лист; </li>
 <li> об­раз­цы до­ку­мен­тов: до­го­во­ры, ли­цен­зии, ди­пло­мы и на­гра­ды; </li>
 <li> кон­такт­ная ин­фор­ма­ция: те­ле­фо­ны, адре­са, схе­ма про­ез­да. </li>
@@ -95,25 +95,25 @@
 <p>Ин­фор­ма­ция на сай­тах-ви­зит­ках не обя­за­тель­но долж­на огра­ни­чи­вать­ся сплош­ным тек­стом и не­сколь­ки­ми фо­то­гра­фи­я­ми. В до­пол­не­ние к пе­ре­чис­лен­ным вы­ше раз­де­лам сай­та мы мо­жем пред­ло­жить на­бор спе­ци­а­ли­зи­ро­ван­ных мо­ду­лей:</p>
 <ul>
 <li> но­вост­ная рас­сыл­ка RSS; </li>
-<li> <a href="/projects/cms/gallery/">фо­то- и ви­део­га­ле­реи</a> про­дук­ции или услуг; </li>
+<li> фо­то- и ви­део­га­ле­реи про­дук­ции или услуг; </li>
 <li> фор­мы об­рат­ной свя­зи; </li>
-<li> <a href="/projects/cms/mfreq/">раз­дел во­про­сов и от­ве­тов</a>; </li>
-<li> <a href="/projects/cms/gbook/">го­сте­вая кни­га</a> и т.д. </li>
+<li> раз­дел во­про­сов и от­ве­тов; </li>
+<li> го­сте­вая кни­га и т.д. </li>
 </ul>
 <p>Эти и дру­гие функ­цио­наль­ные воз­мож­но­сти сде­ла­ют ваш сайт бо­лее удоб­ным и при­вле­ка­тель­ным для по­се­ти­те­лей.</p>
-<p>На сайт уста­навливается <a href="/projects/cms/">си­сте­ма управ­ле­ния кон­тен­том</a> Muxe CMS с выбранным вами на­бо­ром мо­ду­лей. Дан­ная про­грам­ма поз­во­ля­ет из­ме­нять со­дер­жа­ние стра­ниц сай­та без зна­ния язы­ков про­грам­ми­ро­ва­ния. Для адми­ни­стри­ро­ва­ния веб-ре­сур­са вам по­тре­бу­ет­ся толь­ко ком­пью­тер с вы­хо­дом в&nbsp;ин­тер­нет.</p>
+<p>На сайт уста­навливается си­сте­ма управ­ле­ния кон­тен­том Muxe CMS с выбранным вами на­бо­ром мо­ду­лей. Дан­ная про­грам­ма поз­во­ля­ет из­ме­нять со­дер­жа­ние стра­ниц сай­та без зна­ния язы­ков про­грам­ми­ро­ва­ния. Для адми­ни­стри­ро­ва­ния веб-ре­сур­са вам по­тре­бу­ет­ся толь­ко ком­пью­тер с вы­хо­дом в&nbsp;ин­тер­нет.</p>
 <h1>Сро­ки из­го­тов­ле­ния сай­та</h1>
-<p>2–3 не­де­ли в за­ви­си­мо­сти от слож­но­сти про­ек­та. <br> Все ра­бо­ты про­из­во­дят­ся в со­от­вет­ствии с по­этап­ной <a href="/services/sites/plan/">схе­мой со­зда­ния веб-сай­та</a>.</p>
+<p>2–3 не­де­ли в за­ви­си­мо­сти от слож­но­сти про­ек­та. <br> Все ра­бо­ты про­из­во­дят­ся в со­от­вет­ствии с по­этап­ной схе­мой со­зда­ния веб-сай­та.</p>
 <p>Не­об­хо­ди­мая ин­фор­ма­ция для со­зда­ния сай­та-ви­зит­ки:</p>
 <ul>
 <li> Ло­го­тип и фир­мен­ные цве­та для раз­ра­бот­ки веб-ди­зай­на. Ес­ли у вас их еще нет, то на­ши ди­зай­не­ры бу­дут ра­ды вам по­мочь. </li>
 <li> Ва­ши по­же­ла­ния по внут­рен­ней струк­ту­ре и внеш­не­му ви­ду бу­ду­ще­го сай­та. </li>
 <li> Тек­сто­вая и гра­фи­че­ская ин­фор­ма­ция в элек­трон­ном ви­де для на­пол­не­ния ре­сур­са. </li>
-<li> Пас­порт­ные дан­ные для ре­ги­стра­ции до­мен­но­го име­ни (ес­ли у вас его еще нет). По­дроб­нее об этом чи­тай­те в раз­де­ле <a href="/hosting/">«Хо­стинг сай­тов»</a>. </li>
+<li> Пас­порт­ные дан­ные для ре­ги­стра­ции до­мен­но­го име­ни (ес­ли у вас его еще нет). По­дроб­нее об этом чи­тай­те в раз­де­ле <a href="#">«Хо­стинг сай­тов»</a>. </li>
 </ul>
 <h1>Сто­и­мость раз­ра­бот­ки сай­та-ви­зит­ки</h1>
 <p>Ес­ли вас за­ин­те­ре­со­ва­ло на­ше пред­ло­же­ние по со­зда­нию сай­та-ви­зит­ки  или у вас по­яви­лись во­про­сы, свя­жи­тесь с на­ми лю­бым удоб­ным для вас спо­со­бом. На­ши спе­ци­а­ли­сты бу­дут ра­ды вам по­мочь!</p>
-<p class="sm">Для по­лу­че­ния по­дроб­ной ин­фор­ма­ции о сто­и­мо­сти сай­та с кон­крет­ным на­бо­ром функ­ций, по­жа­луй­ста, за­пол­ни­те <a href="contakts.html">online-фор­му пред­ва­ри­тель­но­го за­ка­за</a> — от­прав­ка за­про­са за­ни­ма­ет око­ло ми­ну­ты и ни к че­му вас не обя­зы­ва­ет!</p>
+<p class="sm">Для по­лу­че­ния по­дроб­ной ин­фор­ма­ции о сто­и­мо­сти сай­та с кон­крет­ным на­бо­ром функ­ций, по­жа­луй­ста, за­пол­ни­те <a href="contacts2.html">фор­му пред­ва­ри­тель­но­го за­ка­за</a> — от­прав­ка за­про­са за­ни­ма­ет око­ло ми­ну­ты и ни к че­му вас не обя­зы­ва­ет!</p>
 
          </div>
 
@@ -151,7 +151,7 @@
                <li class="title">Меню<li>
                <li><a href="home.html">Главная</a></li>
                <li><a href="about_me.html">Обо мне</a></li>
-               <li><a href="contakts.html">Контакты</a></li>
+               <li><a href="contacts2.html">Контакты</a></li>
 
              </ul>
            </div>
@@ -166,7 +166,7 @@
            </div>
            <div class="col-md-3">
              <ul class="list-unstyled">
-               <li class="title"><a href="contakts.html">Контакты</a><li>
+               <li class="title"><a href="contacts2.html">Контакты</a><li>
                <li> Тел:+30676370543</li>
                <li> Тел:+30508499303</li>
                <li> Email:minenkosergey06@gmail.com</li>
@@ -190,6 +190,16 @@
          </div>
        </div>
       </div>
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.js" type="text/javascript"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            var url = document.location.toString();
+            $("a").filter(function () {
+                return url.indexOf(this.href) != -1;
+            }).addClass("Current");
+        });
+    </script>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -202,7 +212,7 @@
 
      });
 
-
+</script>
 
 
   </body>
