--- a/home.html
+++ b/home.html
@@ -15,7 +15,8 @@
          <div class="navbar navbar-inverse navbar-fixed-top">
           <div class="container">
             <div class="navbar-header">
-              <button type="button"class="navbar-toggle"data-toggle="collapse"data-target="#responsive-menu">
+              <button type="button"class="navbar-toggle"data-toggle="collapse"
+              data-target="#responsive-menu">
                 <span class="sr-only">Открыть навигацыю</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -77,12 +78,20 @@
          <br>
          <br>
          <div id="up"></div>
-         <a href="javaScript://0"onclick="slowScroll('#more')"><i class="fa fa-angle-double-down fa-2x" aria-hidden="true">Вниз</i></a>
+         <a href="javaScript://0"onclick="slowScroll('#more')">
+           <i class="fa fa-angle-double-down fa-2x" aria-hidden="true">Вниз</i>
+         </a>
          <div class="container">
            <div class="row">
 
            <h1>Сайт-визитка</h1>
-<p>Со­зда­ние сай­тов-ви­зи­ток обыч­но за­ка­зы­ва­ют не­боль­шие ор­га­ни­за­ции и част­ные ли­ца, ко­то­рые толь­ко на­чи­на­ют ра­бо­тать в се­ти Ин­тер­нет. Глав­ная цель для них — по­лу­чить соб­ствен­ное веб-пред­ста­ви­тель­ство, где бу­дет раз­ме­ще­на вся не­об­хо­ди­мая для кли­ен­тов ин­фор­ма­ция: адре­са, те­ле­фо­ны, при­ме­ры до­го­во­ров и т.д. Ведь на сай­те прайс-ли­сты, ли­цен­зии и дру­гие до­ку­мен­ты удоб­ны для про­смот­ра и до­ступ­ны в лю­бое вре­мя.</p>
+<p>Со­зда­ние сай­тов-ви­зи­ток обыч­но за­ка­зы­ва­ют не­боль­шие ор­га­ни­за­ции и част­ные
+   ли­ца, ко­то­рые толь­ко на­чи­на­ют ра­бо­тать в се­ти Ин­тер­нет.
+  Глав­ная цель для них — по­лу­чить соб­ствен­ное веб-пред­ста­ви­тель­ство, где бу­дет
+   раз­ме­ще­на вся не­об­хо­ди­мая для кли­ен­тов ин­фор­ма­ция: адре­са, те­ле­фо­ны, при­ме­ры
+    до­го­во­ров и т.д.
+  Ведь на сай­те прайс-ли­сты, ли­цен­зии и дру­гие до­ку­мен­ты удоб­ны для
+  про­смот­ра и до­ступ­ны в лю­бое вре­мя.</p>
 <h1>Стан­дарт­ное (ба­зо­вое) со­дер­жа­ние сай­та-ви­зит­ки</h1>
 <ul>
 <li> опи­са­ние де­я­тель­но­сти ком­па­нии; </li>
@@ -92,7 +101,9 @@
 <li> об­раз­цы до­ку­мен­тов: до­го­во­ры, ли­цен­зии, ди­пло­мы и на­гра­ды; </li>
 <li> кон­такт­ная ин­фор­ма­ция: те­ле­фо­ны, адре­са, схе­ма про­ез­да. </li>
 </ul>
-<p>Ин­фор­ма­ция на сай­тах-ви­зит­ках не обя­за­тель­но долж­на огра­ни­чи­вать­ся сплош­ным тек­стом и не­сколь­ки­ми фо­то­гра­фи­я­ми. В до­пол­не­ние к пе­ре­чис­лен­ным вы­ше раз­де­лам сай­та мы мо­жем пред­ло­жить на­бор спе­ци­а­ли­зи­ро­ван­ных мо­ду­лей:</p>
+<p>Ин­фор­ма­ция на сай­тах-ви­зит­ках не обя­за­тель­но долж­на огра­ни­чи­вать­ся сплош­ным
+   тек­стом и не­сколь­ки­ми фо­то­гра­фи­я­ми. В до­пол­не­ние к пе­ре­чис­лен­ным вы­ше
+    раз­де­лам сай­та мы мо­жем пред­ло­жить на­бор спе­ци­а­ли­зи­ро­ван­ных мо­ду­лей:</p>
 <ul>
 <li> но­вост­ная рас­сыл­ка RSS; </li>
 <li> фо­то- и ви­део­га­ле­реи про­дук­ции или услуг; </li>
@@ -100,25 +111,43 @@
 <li> раз­дел во­про­сов и от­ве­тов; </li>
 <li> го­сте­вая кни­га и т.д. </li>
 </ul>
-<p>Эти и дру­гие функ­цио­наль­ные воз­мож­но­сти сде­ла­ют ваш сайт бо­лее удоб­ным и при­вле­ка­тель­ным для по­се­ти­те­лей.</p>
-<p>На сайт уста­навливается си­сте­ма управ­ле­ния кон­тен­том Muxe CMS с выбранным вами на­бо­ром мо­ду­лей. Дан­ная про­грам­ма поз­во­ля­ет из­ме­нять со­дер­жа­ние стра­ниц сай­та без зна­ния язы­ков про­грам­ми­ро­ва­ния. Для адми­ни­стри­ро­ва­ния веб-ре­сур­са вам по­тре­бу­ет­ся толь­ко ком­пью­тер с вы­хо­дом в&nbsp;ин­тер­нет.</p>
+<p>Эти и дру­гие функ­цио­наль­ные воз­мож­но­сти сде­ла­ют ваш сайт бо­лее удоб­ным и
+  при­вле­ка­тель­ным для по­се­ти­те­лей.</p>
+<p>На сайт уста­навливается си­сте­ма управ­ле­ния кон­тен­том Muxe CMS с выбранным
+  вами на­бо­ром мо­ду­лей. Дан­ная про­грам­ма поз­во­ля­ет из­ме­нять со­дер­жа­ние стра­ниц
+  сай­та без зна­ния язы­ков про­грам­ми­ро­ва­ния. Для адми­ни­стри­ро­ва­ния веб-ре­сур­са
+   вам по­тре­бу­ет­ся толь­ко ком­пью­тер с вы­хо­дом в&nbsp;ин­тер­нет.</p>
 <h1>Сро­ки из­го­тов­ле­ния сай­та</h1>
-<p>2–3 не­де­ли в за­ви­си­мо­сти от слож­но­сти про­ек­та. <br> Все ра­бо­ты про­из­во­дят­ся в со­от­вет­ствии с по­этап­ной схе­мой со­зда­ния веб-сай­та.</p>
+<p>2–3 не­де­ли в за­ви­си­мо­сти от слож­но­сти про­ек­та.
+  <br> Все ра­бо­ты про­из­во­дят­ся в со­от­вет­ствии с по­этап­ной схе­мой со­зда­ния
+  веб-сай­та.</p>
 <p>Не­об­хо­ди­мая ин­фор­ма­ция для со­зда­ния сай­та-ви­зит­ки:</p>
 <ul>
-<li> Ло­го­тип и фир­мен­ные цве­та для раз­ра­бот­ки веб-ди­зай­на. Ес­ли у вас их еще нет, то на­ши ди­зай­не­ры бу­дут ра­ды вам по­мочь. </li>
-<li> Ва­ши по­же­ла­ния по внут­рен­ней струк­ту­ре и внеш­не­му ви­ду бу­ду­ще­го сай­та. </li>
-<li> Тек­сто­вая и гра­фи­че­ская ин­фор­ма­ция в элек­трон­ном ви­де для на­пол­не­ния ре­сур­са. </li>
-<li> Пас­порт­ные дан­ные для ре­ги­стра­ции до­мен­но­го име­ни (ес­ли у вас его еще нет). По­дроб­нее об этом чи­тай­те в раз­де­ле <a href="#">«Хо­стинг сай­тов»</a>. </li>
+<li> Ло­го­тип и фир­мен­ные цве­та для раз­ра­бот­ки веб-ди­зай­на. Ес­ли у вас их
+   еще нет, то на­ши ди­зай­не­ры бу­дут ра­ды вам по­мочь. </li>
+<li> Ва­ши по­же­ла­ния по внут­рен­ней струк­ту­ре и внеш­не­му ви­ду
+   бу­ду­ще­го сай­та. </li>
+<li> Тек­сто­вая и гра­фи­че­ская ин­фор­ма­ция в элек­трон­ном ви­де для
+  на­пол­не­ния ре­сур­са. </li>
+<li> Пас­порт­ные дан­ные для ре­ги­стра­ции до­мен­но­го име­ни (ес­ли у вас его еще нет).
+   По­дроб­нее об этом чи­тай­те в раз­де­ле <a href="#">«Хо­стинг сай­тов»</a>. </li>
 </ul>
 <h1>Сто­и­мость раз­ра­бот­ки сай­та-ви­зит­ки</h1>
-<p>Ес­ли вас за­ин­те­ре­со­ва­ло на­ше пред­ло­же­ние по со­зда­нию сай­та-ви­зит­ки  или у вас по­яви­лись во­про­сы, свя­жи­тесь с на­ми лю­бым удоб­ным для вас спо­со­бом. На­ши спе­ци­а­ли­сты бу­дут ра­ды вам по­мочь!</p>
-<p class="sm">Для по­лу­че­ния по­дроб­ной ин­фор­ма­ции о сто­и­мо­сти сай­та с кон­крет­ным на­бо­ром функ­ций, по­жа­луй­ста, за­пол­ни­те <a href="contacts2.html">фор­му пред­ва­ри­тель­но­го за­ка­за</a> — от­прав­ка за­про­са за­ни­ма­ет око­ло ми­ну­ты и ни к че­му вас не обя­зы­ва­ет!</p>
+<p>Ес­ли вас за­ин­те­ре­со­ва­ло на­ше пред­ло­же­ние по со­зда­нию сай­та-ви­зит­ки  или у
+   вас по­яви­лись во­про­сы, свя­жи­тесь с на­ми лю­бым удоб­ным для вас спо­со­бом.
+    На­ши спе­ци­а­ли­сты бу­дут ра­ды вам по­мочь!</p>
+<p class="sm">Для по­лу­че­ния по­дроб­ной ин­фор­ма­ции о сто­и­мо­сти сай­та с кон­крет­ным
+   на­бо­ром функ­ций, по­жа­луй­ста, за­пол­ни­те
+    <a href="contacts2.html">фор­му пред­ва­ри­тель­но­го за­ка­за</a> — от­прав­ка
+    за­про­са за­ни­ма­ет око­ло ми­ну­ты и ни к че­му вас не обя­зы­ва­ет!</p>
 
          </div>
 
        </div>
-       <div id="more"> <a href="javaScript://0"onclick="slowScroll('#up')"><i class="fa fa-angle-double-up fa-2x" aria-hidden="true">Наверх</i></a></div>
+       <div id="more"> <a href="javaScript://0"onclick="slowScroll('#up')">
+         <i class="fa fa-angle-double-up fa-2x" aria-hidden="true">Наверх</i>
+       </a>
+     </div>
 
      <script src="js/jquery-3.2.1.min.js"charset="utf-8"></script>
 
@@ -140,10 +169,14 @@
            <div class="col-md-3">
              <ul class="list-unstyled">
                <li class="title">Соцсети<li>
-                 <li><a href="https://vk.com/"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
-                 <li><a href="https://twitter.com/?lang=ru"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                 <li><a href="https://www.instagram.com/?hl=ru"><<i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                 <li><a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                 <li><a href="https://vk.com/"><i class="fa fa-vk"
+                   aria-hidden="true"></i></a></li>
+                 <li><a href="https://twitter.com/?lang=ru">
+                   <i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                 <li><a href="https://www.instagram.com/?hl=ru">
+                   <i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                 <li><a href="https://www.facebook.com/">
+                   <i class="fa fa-facebook" aria-hidden="true"></i></a></li>
              </ul>
            </div>
            <div class="col-md-3">
@@ -190,7 +223,8 @@
          </div>
        </div>
       </div>
-      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.js" type="text/javascript"></script>
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.js"
+       type="text/javascript"></script>
 
     <script type="text/javascript">
         $(document).ready(function () {
@@ -202,8 +236,10 @@
     </script>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
+</script>
+    <!-- Include all compiled plugins (below), or include individual
+     files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script>
      $ (function () {
