--- a/about_me.html
+++ b/about_me.html
@@ -15,7 +15,8 @@
          <div class="navbar navbar-inverse navbar-fixed-top">
           <div class="container">
             <div class="navbar-header">
-              <button type="button"class="navbar-toggle"data-toggle="collapse"data-target="#responsive-menu">
+              <button type="button"class="navbar-toggle"data-toggle="collapse"
+              data-target="#responsive-menu">
                 <span class="sr-only">Открыть навигацыю</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -77,7 +78,9 @@
          <br>
          <br>
          <div id="up"></div>
-         <a href="javaScript://0"onclick="slowScroll('#more')"><i class="fa fa-angle-double-down fa-2x" aria-hidden="true">Вниз</i></a>
+         <a href="javaScript://0"onclick="slowScroll('#more')">
+           <i class="fa fa-angle-double-down fa-2x" aria-hidden="true">Вниз</i>
+         </a>
          <div class="container">
            <div class="row">
              <img src="css/img/web-portfolio-image.png"alt="">
@@ -86,7 +89,10 @@
          </div>
 
        </div>
-       <div id="more"> <a href="javaScript://0"onclick="slowScroll('#up')"><i class="fa fa-angle-double-up fa-2x" aria-hidden="true">Наверх</i></a></div>
+       <div id="more"> <a href="javaScript://0"onclick="slowScroll('#up')">
+         <i class="fa fa-angle-double-up fa-2x" aria-hidden="true">Наверх</i>
+       </a>
+     </div>
 
      <script src="js/jquery-3.2.1.min.js"charset="utf-8"></script>
 
@@ -108,10 +114,14 @@
            <div class="col-md-3">
              <ul class="list-unstyled">
                <li class="title">Соцсети<li>
-                 <li><a href="https://vk.com/"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
-                 <li><a href="https://twitter.com/?lang=ru"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                 <li><a href="https://www.instagram.com/?hl=ru"><<i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                 <li><a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                 <li><a href="https://vk.com/"><i class="fa fa-vk"
+                   aria-hidden="true"></i></a></li>
+                 <li><a href="https://twitter.com/?lang=ru">
+                   <i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                 <li><a href="https://www.instagram.com/?hl=ru">
+                   <i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                 <li><a href="https://www.facebook.com/">
+                   <i class="fa fa-facebook" aria-hidden="true"></i></a></li>
              </ul>
            </div>
            <div class="col-md-3">
@@ -158,7 +168,8 @@
          </div>
        </div>
       </div>
-      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.js" type="text/javascript"></script>
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.js"
+       type="text/javascript"></script>
 
     <script type="text/javascript">
         $(document).ready(function () {
@@ -170,8 +181,10 @@
     </script>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
+</script>
+    <!-- Include all compiled plugins (below), or include individual
+     files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script>
      $ (function () {
