--- a/contacts2.html
+++ b/contacts2.html
@@ -13,7 +13,8 @@
   <div class="navbar navbar-inverse navbar-fixed-top">
    <div class="container">
      <div class="navbar-header">
-       <button type="button"class="navbar-toggle"data-toggle="collapse"data-target="#responsive-menu">
+       <button type="button"class="navbar-toggle"data-toggle="collapse"
+       data-target="#responsive-menu">
          <span class="sr-only">Открыть навигацыю</span>
          <span class="icon-bar"></span>
          <span class="icon-bar"></span>
@@ -81,11 +82,14 @@
            <h4><span class="colored">///</span> Закажите изготовление сайта</h4>
            <p>Телефон для связи: <strong>+30676370543</strong></p>
            <p>Почта для связи: <strong>minenkosergey06@gmail.com</strong></p>
-             <p>Если вы хотите задать мне вопрос, предложить что-то или обсудить,
-             то вы можете связаться со мной по указанным выше контактам. Я всегда рад ответить на любые ваши вопросы,
+             <p>Если вы хотите задать мне вопрос, предложить что-то или
+               обсудить,
+             то вы можете связаться со мной по указанным выше контактам.
+             Я всегда рад ответить на любые ваши вопросы,
              и всегда готов обсудить ваши предложения.</p>
              <p>Живу я в Днепре, и всегда  готов встретиться с вами для
-             обсуждения рабочих моментов по сайту. Многим людям проще и удобней общаться вживую.</p>
+             обсуждения рабочих моментов по сайту. Многим людям проще и
+             удобней общаться вживую.</p>
        </div>
      </div>
      <div class="col-md-8">
@@ -136,10 +140,14 @@ class="btn btn-primary" value="Отправить">
 <div class="col-md-3">
 <ul class="list-unstyled">
  <li class="title">Соцсети<li>
-   <li><a href="https://vk.com/"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
-   <li><a href="https://twitter.com/?lang=ru"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-   <li><a href="https://www.instagram.com/?hl=ru"><<i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-   <li><a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+   <li><a href="https://vk.com/"><i class="fa fa-vk" aria-hidden="true">
+   </i></a></li>
+   <li><a href="https://twitter.com/?lang=ru"><i class="fa fa-twitter"
+     aria-hidden="true"></i></a></li>
+   <li><a href="https://www.instagram.com/?hl=ru"><<i class="fa fa-instagram"
+      aria-hidden="true"></i></a></li>
+   <li><a href="https://www.facebook.com/"><i class="fa fa-facebook"
+     aria-hidden="true"></i></a></li>
 </ul>
 </div>
 <div class="col-md-3">
@@ -186,7 +194,8 @@ class="btn btn-primary" value="Отправить">
 </div>
 </div>
 </div>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.js"
+type="text/javascript"></script>
 
 <script type="text/javascript">
 $(document).ready(function () {
@@ -198,8 +207,10 @@ $("a").filter(function () {
 </script>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
+</script>
+<!-- Include all compiled plugins (below), or include individual
+ files as needed -->
 <script src="js/bootstrap.min.js"></script>
 <script>
 $ (function () {
