--- a/about_me.html
+++ b/about_me.html
@@ -84,8 +84,58 @@
          <div class="container">
            <div class="row">
              <img src="css/img/web-portfolio-image.png"alt="">
+         </div>
+                <h1 class="center">Кратко обо мне</h1>
+           <div class="row">
+             <div class="col-md-4 ">
+             <p><img src="css/img/sergey.jpg"width="250" height="380"alt=""></p>
 
+           </div>
+             <div class="col-md-8 ">
 
+             <p>Meня зовут Миненко Сергей Андреевич мне 35 лет проживаю в
+               г Днепре . Я изучаю языки програмирования css,html,JavaScript.
+               Владею ураинским руским языком английским техническим также изучаяю
+               английский разговорный . Спицыализируюсь на изготовлении сайтов визиток
+               сайтов одностраничок портфолио интернет магазинов.
+               Я стремлюсь к наивысшему
+               качеству своих работ,
+               оставляя цены на услуги доступными. На мой взгляд, это разумный
+               подход на рынке, где качество является крайне редким и не
+               подъемно дорогим товаром. Моими клиентами являются те, кто ждет
+               исполнения своего проекта исключительно на самом высоком
+               уровне. На данный момент мы имеем офис в Днепре, но так же
+               работаем и со всей Украиной на удаленной основе, благо в наш
+               век глобальной информатизации и мобильности - это возможно.
+               Mы не гонимся за количеством, мне важно качество и
+               индивидуальность.
+               Я - это пример сплоченности и
+               ультра-профессионализма. Я и моя команда придаем самое пристальное
+               внимание не только форме но и содержанию, смысл так же важен.
+               Все, что мы делаем, помогает мне и моим клиентам
+               добиваться новых высот.Со мной, мы будем
+               стремиться получить только самые лучшие
+               результаты - конечный продукт, достойный Вашего имени.
+
+             </p>
+             <br>
+             <div class="we-like">
+             <h4>Mои принцыпы работы</h4>
+             <br>
+              <ul class="icons2">
+                <li><img class="grayscale grayscale-fade" alt="" src="css/img/ico1.png">
+                 <p>Исследование</p></li>
+                <li><img class="grayscale grayscale-fade" alt="" src="css/img/ico2.png">
+                 <p>Идеи</p></li>
+               <li> <img class="grayscale grayscale-fade" alt="" src="css/img/ico3.png">
+                <p>Создание</p></li>
+               <li><img class="grayscale grayscale-fade" alt="" src="css/img/ico4.png">
+                 <p>Доработки</p>	</li>
+               <li><img class="grayscale grayscale-fade" alt="" src="css/img/ico5.png">
+              <p> Обслуживание</p>	</li>
+              </ul>
+            </div>
+           </div>
          </div>
 
        </div>
