--- a/contacts2.html
+++ b/contacts2.html
@@ -100,23 +100,23 @@
 
 </p>
 
-<form name="contact-form" action="/contactus" method="post">
+<form name="contact-form" action="/contactus" method="post"id="form">
 
 <div class="form-group">
 <label for="name">Имя</label>
 <input name="name" type="text" class="form-control"
-placeholder="Ваше имя">
+placeholder="Ваше имя"id="name">
 </div>
 <div class="form-group">
 <label for="email"> E-mail</label>
 <input name="email" type="text" class="form-control"
-placeholder="minenkosergey06@gmail.com">
+placeholder="minenkosergey06@gmail.com"id="email">
 </div>
 
 <div class="form-group">
 <label for="phone">Телефон</label>
 <input name="phone" type="text" class="form-control"
-placeholder="Ваш телефон">
+placeholder="Ваш телефон"id="phone">
 </div>
 
 <div class="form-group">
@@ -125,7 +125,7 @@ placeholder="Ваш телефон">
  placeholder="Ваш текст"></textarea>
 </div>
 
-<input name="submit" type="submit"
+<input name="button" type="button"onclick="valid(document.getElementById('form'))"
 class="btn btn-primary" value="Отправить">
 </form>
      </div>
@@ -194,6 +194,37 @@ class="btn btn-primary" value="Отправить">
 </div>
 </div>
 </div>
+
+<script type="text/javascript">
+ function valid(form){
+    var fail=false;
+    var name=form.name.value;
+    var email=form.email.value;
+    var phone=form.phone.value;
+
+
+    var adr_pattern = /[0-9a-z_-]+@[0-9a-z_-]+\.[a-z]{2,5}/i;
+
+
+    if (name ==""|| name == "")
+      fail = "вы не ввели свое имя" ;
+    //else if (email.split('@').lenght -1 == 0) можна любой символ
+    //  fail = "вы  ввели email неправельно" ;
+    else if (adr_pattern.test(email)==false)
+      fail = "вы  ввели email неправельно" ;
+    else if (phone=="")
+      fail = "введите номер телефона" ;
+
+
+      if (fail)
+       alert(fail);
+
+
+
+ }
+
+</script>
+
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.js"
 type="text/javascript"></script>
 
