--- a/contacts2.html
+++ b/contacts2.html
@@ -8,6 +8,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+   <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
 
   </head>
   <div class="navbar navbar-inverse navbar-fixed-top">
@@ -100,7 +101,7 @@
 
 </p>
 
-<form name="contact-form" action="/contactus" method="post"id="form">
+<form name="contact-form" action="send.php" method="post"id="form">
 
 <div class="form-group">
 <label for="name">Имя</label>
@@ -128,6 +129,7 @@ placeholder="Ваш телефон"id="phone">
 <input name="button" type="button"onclick="valid(document.getElementById('form'))"
 class="btn btn-primary" value="Отправить">
 </form>
+
      </div>
 </div>
 </section>
