--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+     <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
 
   </head>
   <body>
