--- a/contacts2.html
+++ b/contacts2.html
@@ -71,6 +71,7 @@
     <a href="#carousel"class="right carousel-control"data-slide="next">
       <span class="glyphicon glyphicon-chevron-right"><span>
     </a>
+  </div>
 
 
 
