--- a/form.html
+++ b/form.html
@@ -4,11 +4,41 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Form</title>
+  <title>WebsiteCard</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/font-awesome.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="js/java" rel="stylesheet">
+   <script src="http://code.jquery.com/jquery-3.1.0.js"></script>
+
+</head>
+<body>
+
+  <h1 class="h2 page-header text-center">Bootstrap - AJAX форма обратной связи</h1>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 col-sm-offset-3">
+        <!-- Контейнер, содержащий форму обратной связи -->
+        <div class="panel panel-info">
+          <!-- Заголовок контейнера -->
+          <div class="panel-heading">
+            <h3 class="panel-title">Форма обратной связи</h3>
+          </div>
+          <!-- Содержимое контейнера -->
+          <div class="panel-body">
+
+            <!-- Сообщение, отображаемое в случае успешной отправки данных -->
+            <div class="alert alert-success hidden" role="alert" id="successMessage">
+              <strong>Внимание!</strong> Ваше сообщение успешно отправлено.
+            </div>
+
+            <!-- Форма обратной связи -->
+            <form id="contactForm">
+              <div class="row">
+
+
+                <div id="error" class="col-sm-12" style="color: #ff0000; margin-top: 5px; margin-bottom: 5px;"></div>
 
                 <!-- Имя и email пользователя -->
                 <div class="col-sm-6">
@@ -57,36 +87,9 @@
       </div>
     </div>
   </div>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.js"
-   type="text/javascript"></script>
 
-<script type="text/javascript">
-    $(document).ready(function () {
-        var url = document.location.toString();
-        $("a").filter(function () {
-            return url.indexOf(this.href) != -1;
-        }).addClass("Current");
-    });
-</script>
-
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
-</script>
-<!-- Include all compiled plugins (below), or include individual
- files as needed -->
-<script src="js/bootstrap.min.js"></script>
-<script>
- $ (function () {
-   $('[data-toggle="tooltip"]') .tooltip();
-   $('[data-toggle="popover"]') .popover();
-
- });
-</script>
-
-
-
-  <script src="/feedback/js/jquery-3.1.0.min.js"></script>
-  <script src="/feedback/js/bootstrap.min.js"></script>
-  <script src="/feedback/script.js"></script>
+  <script src="/js/jquery-3.1.0.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+  <script src="/script.js"></script>
 </body>
 </html>
