--- a/about_me.html
+++ b/about_me.html
@@ -27,7 +27,7 @@
             </div>
             <div class="collapse navbar-collapse" id="responsive-menu">
               <ul class="nav navbar-nav">
-                <li><a href="home.html">Главная</a></li>
+                <li><a href="index.html">Главная</a></li>
 
                 <li><a href="about_me.html">Обо мне</a></li>
                 <li><a href="contacts2.html">Контакты</a></li>
@@ -160,9 +160,10 @@
 
        <br>
        <hr>
+       <div class="container">
        <div class="row">
          <div class="col-lg-12">
-           <div class="col-md-3">
+           <!--<div class="col-md-3">
              <ul class="list-unstyled">
                <li class="title">Соцсети<li>
                  <li><a href="https://vk.com/"><i class="fa fa-vk"
@@ -174,11 +175,11 @@
                  <li><a href="https://www.facebook.com/">
                    <i class="fa fa-facebook" aria-hidden="true"></i></a></li>
              </ul>
-           </div>
+           </div>-->
            <div class="col-md-3">
              <ul class="list-unstyled">
                <li class="title">Меню<li>
-               <li><a href="home.html">Главная</a></li>
+               <li><a href="index.html">Главная</a></li>
                <li><a href="about_me.html">Обо мне</a></li>
                <li><a href="contacts2.html">Контакты</a></li>
 
