--- a/contacts2.html
+++ b/contacts2.html
@@ -25,7 +25,7 @@
      </div>
      <div class="collapse navbar-collapse" id="responsive-menu">
        <ul class="nav navbar-nav">
-         <li><a href="home.html">Главная</a></li>
+         <li><a href="index.html">Главная</a></li>
          <li><a href="about_me.html">Обо мне</a></li>
          <li><a href="contacts2.html">Контакты</a></li>
        </ul>
@@ -138,9 +138,10 @@ class="btn btn-primary" value="Отправить">
 
 <br>
 <hr>
+<div class="container">
 <div class="row">
 <div class="col-lg-12">
-<div class="col-md-3">
+<!--<div class="col-md-3">
 <ul class="list-unstyled">
  <li class="title">Соцсети<li>
    <li><a href="https://vk.com/"><i class="fa fa-vk" aria-hidden="true">
@@ -152,11 +153,11 @@ class="btn btn-primary" value="Отправить">
    <li><a href="https://www.facebook.com/"><i class="fa fa-facebook"
      aria-hidden="true"></i></a></li>
 </ul>
-</div>
+</div>-->
 <div class="col-md-3">
 <ul class="list-unstyled">
  <li class="title">Меню<li>
- <li><a href="home.html">Главная</a></li>
+ <li><a href="index.html">Главная</a></li>
  <li><a href="about_me.html">Обо мне</a></li>
  <li><a href="contacts2.html">Контакты</a></li>
 
