--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   </head>
   <body>
-    
+
          <div class="navbar navbar-inverse navbar-fixed-top">
           <div class="container">
             <div class="navbar-header">
@@ -27,7 +27,7 @@
             </div>
             <div class="collapse navbar-collapse" id="responsive-menu">
               <ul class="nav navbar-nav">
-                <li><a href="home.html">Главная</a></li>
+                <li><a href="index.html">Главная</a></li>
 
                 <li><a href="about_me.html">Обо мне</a></li>
                 <li><a href="contacts2.html">Контакты</a></li>
@@ -83,6 +83,7 @@
            <i class="fa fa-angle-double-down fa-2x" aria-hidden="true">Вниз</i>
          </a>
          <div class="container">
+
            <div class="row">
 
            <h1>Сайт-визитка</h1>
@@ -165,9 +166,10 @@
 
        <br>
        <hr>
+       <div class="container">
        <div class="row">
          <div class="col-lg-12">
-           <div class="col-md-3">
+           <!--<div class="col-md-3">
              <ul class="list-unstyled">
                <li class="title">Соцсети<li>
                  <li><a href="https://vk.com/"><i class="fa fa-vk"
@@ -179,11 +181,11 @@
                  <li><a href="https://www.facebook.com/">
                    <i class="fa fa-facebook" aria-hidden="true"></i></a></li>
              </ul>
-           </div>
+           </div>-->
            <div class="col-md-3">
              <ul class="list-unstyled">
                <li class="title">Меню<li>
-               <li><a href="home.html">Главная</a></li>
+               <li><a href="index.html">Главная</a></li>
                <li><a href="about_me.html">Обо мне</a></li>
                <li><a href="contacts2.html">Контакты</a></li>
 
