--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@
          </div>
          <br>
          <br>
-         <div id="up"></div>
+         <div id="up">
          <a href="javaScript://0"onclick="slowScroll('#more')">
            <i class="fa fa-angle-double-down fa-2x" aria-hidden="true">Вниз</i>
          </a>
+         </div>
          <div class="container">
 
            <div class="row">
